[package]
name = "quake-util"
version = "0.1.1"
authors = ["Seth <rader.seth@gmail.com>"]
edition = "2021"
description = "A utility library for using Quake file formats"
license = "CC0-1.0 OR MIT OR Apache-2.0"

[features]
default = ["std"]
alloc_fills = ["hashbrown"]
std = []

[dependencies]
hashbrown = { version = "^0.12", optional = true }

[dev-dependencies]
benchmarking = "^0.4"
